All tags added rearranging left

--- a/addentry.ui
+++ b/addentry.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>958</width>
-    <height>395</height>
+    <height>656</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,8 +42,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>440</y>
+     <x>220</x>
+     <y>620</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -120,36 +120,7 @@
      <height>148</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QCheckBox" name="chk_probab">
-      <property name="text">
-       <string>Probabilty</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QCheckBox" name="chk_sort">
-      <property name="text">
-       <string>Sorting</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QCheckBox" name="chk_imple">
-      <property name="text">
-       <string>Implementation</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QCheckBox" name="chk_trees">
-      <property name="text">
-       <string>Trees</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
+   <layout class="QGridLayout" name="gridLayout"/>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
@@ -190,8 +161,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>460</y>
+     <x>500</x>
+     <y>640</y>
      <width>85</width>
      <height>27</height>
     </rect>
@@ -203,8 +174,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>460</y>
+     <x>590</x>
+     <y>640</y>
      <width>85</width>
      <height>27</height>
     </rect>
@@ -258,8 +229,8 @@
   <widget class="QWidget" name="layoutWidget_3">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>440</y>
+     <x>340</x>
+     <y>620</y>
      <width>48</width>
      <height>48</height>
     </rect>
@@ -620,13 +591,364 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>390</y>
+     <y>380</y>
      <width>125</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>Greedy</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_hash_map">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>380</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Hash Map</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_hashing">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>380</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Hashing</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_heap">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>380</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Heap</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_2">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>380</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>CheckBox</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_imple">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>380</y>
+     <width>124</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Implementation</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_matrices">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>380</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Matrices</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_mat_exp">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Matrix Exponentiation</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_mim">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Meet in the middle</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_memoization">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Memoization</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_mod_arith">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Modular Arithmetic</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_number_theory">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Number Theory</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_3">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Priority Queue</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_probab">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>420</y>
+     <width>125</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Probabilty</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_recursion">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Recursion</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_segment_trees">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Segment Trees</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_shortest_path">
+   <property name="geometry">
+    <rect>
+     <x>700</x>
+     <y>420</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Shortest Path</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_sieve">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>470</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sieve</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_simulation">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>470</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Simulation</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_sort">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>460</y>
+     <width>124</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sorting</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_spannin_tree">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>470</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Spanning Tree</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_sqrt_decom">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>470</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sqrt Decomposition</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_stack">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>470</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Stack</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_string_suff">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>470</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>String Suffix Structures</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_suffix_array">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>460</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Suffix Arrays</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_ter_search">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>460</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ternary Search</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_trees">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>470</y>
+     <width>253</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Trees</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="chk_two_ptr">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>500</y>
+     <width>78</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Two Pointers</string>
    </property>
   </widget>
  </widget>
